# AI-Data-Analyst

./: .env  README.md  amazon.db  backend.py  create_database.py  frontend.py  insert_dummy_data.py  main.py  pyproject.toml  requirements.txt
