[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker>=38.0.0",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-google-genai>=3.0.3",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
]
