[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "faker>=38.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-ollama>=1.0.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]
